# ga-creator

./: 1-beleuchtung.csv  1-beleuchtung.yaml  2-beleuchtung_tw.csv  2-beleuchtung_tw.yaml  3-beleuchtung_rgb.csv  3-beleuchtung_rgb.yaml  4-verbraucher.csv  5-präsenz.csv  5-präsenz.yaml  6-jalousien.csv  6-jalousien.yaml  7-heizung.yaml  9-kontakte.csv  9-kontakte.yaml  README.md  config.csv  config.yaml  ga-creator.py  main.py  pyproject.toml  verbraucher.yaml
